# data-eng-sandbox

./: README.md  airflow-values.yaml  airflow_manager.sh  notes.txt  pyproject.toml
airflow/: airflow.cfg
airflow/dags/: hello_world.py
scripts/: airflow_manager.sh
