[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Landon Gingerich <landon.ging@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
